ebikes-lwc-master/force-app/main/default/objects/Loan_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loan Requests</relationshipLabel>
    <relationshipName>Loan_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>