ebikes-lwc-master/force-app/main/default/objects/Loan_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loan Requests</relationshipLabel>
    <relationshipName>Loan_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>