ebikes-lwc-master/force-app/main/default/objects/Loan_Request__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <label>Dealer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>