ebikes-lwc-master/force-app/main/default/objects/Loan_Request__c/fields/Loan_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Request_Number__c</fullName>
    <displayFormat>LR-{00000}</displayFormat>
    <label>Loan Request Number</label>
    <type>AutoNumber</type>
</CustomField>