ebikes-lwc-master/force-app/main/default/objects/Loan_Request__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Loan Requests (Vehicle)</relationshipLabel>
    <relationshipName>Loan_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>